Refactor: Extract methods in OpenShiftOAuth2SecurityRealm